// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SingleSelect should handle unknown value 1`] = `
<div
  className="nice-dropdown nice-form-control"
>
  <button
    className="nice-btn"
    disabled={false}
    onClick={[Function]}
  >
    
    <i
      className="icon fa-angle-down"
    />
  </button>
  <ul
    className="dropdown-menu"
    onClick={[Function]}
  >
    <li
      className={null}
      data-value={1}
      onClick={[Function]}
    >
      <a>
        One
      </a>
    </li>
    <li
      className={null}
      data-value={2}
      onClick={[Function]}
    >
      <a>
        Two
      </a>
    </li>
    <li
      className={null}
      data-value={3}
      onClick={[Function]}
    >
      <a>
        Three
      </a>
    </li>
  </ul>
</div>
`;

exports[`Component: SingleSelect should show a dropdown with 3 items disabled by callback 1`] = `
<div
  className="nice-dropdown nice-form-control"
>
  <button
    className="nice-btn"
    disabled={false}
    onClick={[Function]}
  >
    Three
    <i
      className="icon fa-angle-down"
    />
  </button>
  <ul
    className="dropdown-menu"
    onClick={[Function]}
  >
    <li
      className="disabled"
      data-value={1}
      onClick={null}
    >
      <a>
        One
      </a>
    </li>
    <li
      className={null}
      data-value={2}
      onClick={[Function]}
    >
      <a>
        Two
      </a>
    </li>
    <li
      className="info disabled"
      data-value={3}
      onClick={null}
    >
      <a>
        Three
      </a>
    </li>
  </ul>
</div>
`;

exports[`Component: SingleSelect should show a dropdown with 3 items in various states 1`] = `
<div
  className="nice-dropdown nice-form-control"
>
  <button
    className="nice-btn"
    disabled={false}
    onClick={[Function]}
  >
    Three
    <i
      className="icon fa-angle-down"
    />
  </button>
  <ul
    className="dropdown-menu"
    onClick={[Function]}
  >
    <li
      className="disabled"
      data-value={1}
      onClick={null}
    >
      <a>
        One
      </a>
    </li>
    <li
      className={null}
      data-value={2}
      onClick={[Function]}
    >
      <a>
        Two
      </a>
    </li>
    <li
      className="info"
      data-value={3}
      onClick={[Function]}
    >
      <a>
        Three
      </a>
    </li>
  </ul>
</div>
`;

exports[`Component: SingleSelect should show a simple dropdown with 3 items 1`] = `
<div
  className="nice-dropdown nice-form-control"
>
  <button
    className="nice-btn"
    disabled={false}
    onClick={[Function]}
  >
    
    <i
      className="icon fa-angle-down"
    />
  </button>
  <ul
    className="dropdown-menu"
    onClick={[Function]}
  >
    <li
      className={null}
      data-value={1}
      onClick={[Function]}
    >
      <a>
        One
      </a>
    </li>
    <li
      className={null}
      data-value={2}
      onClick={[Function]}
    >
      <a>
        Two
      </a>
    </li>
    <li
      className={null}
      data-value={3}
      onClick={[Function]}
    >
      <a>
        Three
      </a>
    </li>
  </ul>
</div>
`;
